<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">Seedvault</string>
    <string name="backup">Backup</string>
    <string name="data_management_label">Seedvault Backup</string>
    <string name="current_destination_string">Backup status and settings</string>
    <string name="first_start_text">Do you want to restore your device from an existing backup or start a new backup?</string>
    <string name="restore_backup_button">Restore backup</string>
    <string name="setup_button">Start new</string>
    <string name="settings_category_apps">App backup</string>
    <string name="settings_backup">Backup my apps</string>
    <string name="settings_backup_location">Backup location</string>
    <string name="settings_backup_location_none">None</string>
    <string name="settings_backup_location_internal">Internal storage</string>
    <string name="settings_backup_last_backup_never">Never</string>
    <string name="settings_backup_dialog_title">Really turn off app backups?</string>
    <string name="settings_backup_dialog_message">When you turn backups on again, the backup process may take longer than usual, and it will use additional storage space.</string>
    <string name="settings_backup_dialog_disable">Turn off anyway</string>
    <string name="settings_info">All backups are encrypted on your phone. To restore from backup you will need your 12-word recovery code.</string>
    <string name="settings_auto_restore_title">Automatic restore</string>
    <string name="settings_auto_restore_summary">When reinstalling an app, restore backed up settings and data.</string>
    <string name="settings_auto_restore_summary_usb">Note: Your %1$s needs to be plugged in for this to work.</string>
    <string name="settings_category_app_data_backup">App data backup</string>
    <string name="settings_backup_apk_title">APK backups</string>
    <string name="settings_backup_apk_summary">Backs up the apps themselves. Otherwise, only app data will get backed up.</string>
    <string name="settings_backup_apk_dialog_title">Really disable APK backups?</string>
    <string name="settings_backup_apk_dialog_message">After disabling APK backups, app data will still be backed up. However, it will not get restored automatically.\n\nYou will need to install all your apps manually while having \"Automatic Restore\" switched on.</string>
    <string name="settings_backup_apk_dialog_cancel">Cancel</string>
    <string name="settings_backup_apk_dialog_disable">Disable APK backups</string>
    <string name="settings_backup_status_title">Backup status</string>
    <string name="settings_backup_status_summary">Last backup: %1$s</string>
    <string name="settings_backup_status_next_backup">Next backup: %1$s</string>
    <string name="settings_backup_status_next_backup_estimate">Next backup (estimate): %1$s</string>
    <string name="settings_backup_status_next_backup_past">once conditions are fulfilled</string>
    <string name="settings_backup_status_next_backup_usb">Backups will happen automatically when you plug in your USB drive</string>
    <string name="settings_backup_scheduling_title">Backup scheduling</string>
    <string name="settings_backup_app_check_title">Check integrity</string>
    <string name="settings_backup_app_check_summary">Ensure that backup is working for restore</string>
    <string name="settings_backup_exclude_apps">Exclude apps</string>
    <string name="settings_backup_now">Backup now</string>
    <string name="settings_category_storage">File backup (beta)</string>
    <string name="settings_backup_storage_title">Backup my files</string>
    <string name="settings_backup_files_title">Included files and folders</string>
    <string name="settings_backup_files_summary">None</string>
    <string name="settings_backup_file_check_title">Check backup integrity</string>
    <string name="settings_backup_file_check_summary">Make sure my backup is working for restoring files</string>
    <string name="settings_backup_recovery_code">Recovery code</string>
    <string name="settings_backup_recovery_code_summary">Verify existing code or generate a new one</string>
    <string name="settings_backup_storage_dialog_title">Beta feature</string>
    <string name="settings_backup_storage_dialog_message">Backing up files is beta and might not work. Do not rely on it for important data.</string>
    <string name="settings_backup_storage_dialog_ok">Enable anyway</string>
    <string name="settings_backup_storage_battery_optimization">Warning: No automatic backups, because battery optimization is active.</string>
    <string name="settings_backup_new_code_dialog_title">New recovery code required</string>
    <string name="settings_backup_new_code_dialog_message">To continue using app backups, you need to generate a new recovery code.\n\nWe are sorry for the inconvenience.</string>
    <string name="settings_backup_new_code_code_dialog_ok">New code</string>
    <string name="settings_backup_metered_title">Backup stopped</string>
    <string name="settings_backup_metered_text">The backup won\'t proceed because your device is using mobile data.\n\nYou can enable backups on mobile data under \"Backup scheduling\".</string>
    <string name="settings_scheduling_frequency_title">Backup frequency</string>
    <string name="settings_scheduling_frequency_12_hours">Every 12 hours</string>
    <string name="settings_scheduling_frequency_daily">Daily</string>
    <string name="settings_scheduling_frequency_3_days">Every 3 days</string>
    <string name="settings_scheduling_frequency_weekly">Weekly</string>
    <string name="settings_scheduling_category_conditions_title">Conditions</string>
    <string name="settings_scheduling_metered_title">Back up when using mobile data</string>
    <string name="settings_scheduling_charging_title">Back up only when charging</string>
    <string name="settings_app_check_title">Verify app backup integrity</string>
    <string name="settings_app_check_text">Each backup process will automatically check the backup integrity. However, to save time, actual app data will not be downloaded and verified.</string>
    <string name="settings_app_check_text2">Here you can run a one-time check to verify your app backup. Select how much of the app data should be downloaded for the check. The more you select, the longer it will take, yet the more reliable the check will be. This will run in the background and show a notification once the check is done.</string>
    <string name="settings_app_check_warning">Warning: Downloading large amounts of data can take a long time.</string>
    <string name="settings_app_check_button">Check backup</string>
    <string name="settings_file_check_title">Verify file backup integrity</string>
    <string name="settings_file_check_text">Here you can run a one-time check to verify your file backup.</string>
    <string name="settings_file_check_text2">Select how much of file data should be downloaded for the check. The more you select, the longer it will take, yet the more reliable the check will be.\n\nThe check will run in the background and send you a notification once it is done.</string>
    <string name="settings_expert_title">Expert settings</string>
    <string name="settings_expert_logcat_title">Save app log</string>
    <string name="settings_expert_logcat_summary">Developers can diagnose bugs with these logs.\n\nWarning: The log file might contain personally identifiable information. Review before and delete after sharing!</string>
    <string name="settings_expert_logcat_error">Error: Could not save app log</string>
    <string name="storage_fragment_backup_title">Choose where to store backups</string>
    <string name="storage_fragment_restore_title">Where to find your backups?</string>
    <string name="storage_user_selected_location_title">User-chosen location</string>
    <string name="storage_fake_drive_title">USB flash drive</string>
    <string name="storage_fake_drive_summary">Needs to be plugged in</string>
    <string name="storage_available_bytes"><xliff:g example="1 GB" id="size">%1$s</xliff:g> free</string>
    <string name="storage_not_recommended"><xliff:g example="Skynet">%1$s</xliff:g> (Not recommended)</string>
    <string name="storage_round_sync_summary_prefix">RoundSync Remote: </string>
    <string name="storage_fake_nextcloud_title" translatable="false">Nextcloud</string>
    <string name="storage_fake_nextcloud_summary">Tap to install</string>
    <string name="storage_fake_nextcloud_summary_installed">Tap to set up account</string>
    <string name="storage_fake_nextcloud_summary_unavailable">Account not available. Set one up (or disable passcode).</string>
    <string name="storage_fake_nextcloud_summary_unavailable_market">Not installed</string>
    <string name="storage_fake_davx5_title" translatable="false">DAVx⁵</string>
    <string name="storage_fake_davx5_summary" translatable="false">@string/storage_fake_nextcloud_summary</string>
    <string name="storage_fake_davx5_summary_installed">Tap to set up a WebDAV mount</string>
    <string name="storage_fake_davx5_summary_unavailable">WebDAV mount not available. Set one up.</string>
    <string name="storage_fake_davx5_summary_unavailable_market" translatable="false">@string/storage_fake_nextcloud_summary_unavailable_market</string>
    <string name="storage_check_fragment_backup_title">Initializing backup location…</string>
    <string name="storage_check_fragment_patience">This may take some time…</string>
    <string name="storage_check_fragment_restore_title">Looking for backups…</string>
    <string name="storage_check_fragment_backup_error">An error occurred while accessing the backup location.</string>
    <string name="storage_check_fragment_permission_error">Unable to get the permission to write to the backup location.</string>
    <string name="storage_check_fragment_error_button">Back</string>
    <string name="storage_webdav_option_title">WebDAV Cloud (beta)</string>
    <string name="storage_webdav_option_summary">Integrated direct WebDAV access</string>
    <string name="storage_webdav_config_url">WebDAV URL</string>
    <string name="storage_webdav_config_url_helper">Be sure to enter the full URL here. E.g. for Nextcloud, it has the form https://yourserver.com/remote.php/webdav</string>
    <string name="storage_webdav_config_user">User name</string>
    <string name="storage_webdav_config_pass">Password</string>
    <string name="storage_webdav_config_button">Use WebDAV cloud</string>
    <string name="storage_webdav_config_malformed_url">Invalid WebDAV URL</string>
    <string name="storage_webdav_name">WebDAV %s</string>
    <string name="recovery_code_title">Recovery code</string>
    <string name="recovery_code_12_word_intro">You need your 12-word recovery code to restore backed up data.</string>
    <string name="recovery_code_write_it_down">Write it down on paper now!</string>
    <string name="recovery_code_confirm_button">Confirm code</string>
    <string name="notification_checking_finished_title">App backup integrity verified</string>
    <string name="backup_app_check_success_intro">%1$d snapshots were found and %2$d%% of their data (%3$s) successfully verified:</string>
    <string name="backup_app_check_success_disclaimer">Note: we cannot verify whether individual apps include all of their user data in the backup.</string>
    <string name="restore_choose_restore_set">Choose a backup to restore</string>
    <string name="restore_skip_apps">Skip restoring apps</string>
    <string name="restore_set_empty_result">No suitable backups found at given location.\n\nThis is most likely due to a wrong recovery code or a storage error.</string>
    <string name="restore_set_button_try_again">Try again</string>
    <string name="restore_set_button_restart">Start from beginning</string>
</resources>