<?xml version="1.0" encoding="utf-8"?><!--
  SPDX-FileCopyrightText: 2024 The Calyx Institute
  SPDX-License-Identifier: Apache-2.0
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            style="@style/SudHeaderIcon"
            android:importantForAccessibility="no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_cloud_search"
            app:tint="?android:colorAccent" />

        <TextView
            android:id="@+id/titleView"
            style="@style/SudHeaderTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_app_check_title"
            android:textColor="?android:textColorSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/descriptionView"
            style="@style/SudContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/settings_app_check_text"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleView" />

        <TextView
            android:id="@+id/introView"
            style="@style/SudContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/settings_app_check_text2"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionView" />

        <com.google.android.material.slider.Slider
            android:id="@+id/slider"
            style="@style/SudContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:stepSize="5.0"
            android:value="10.0"
            android:valueFrom="5.0"
            android:valueTo="100.0"
            app:labelBehavior="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/introView"
            app:tickVisible="false"
            tools:labelBehavior="visible" />

        <TextView
            android:id="@+id/sliderLabel"
            style="@style/SudContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/settings_app_check_warning"
            android:textColor="?colorError"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/slider"
            tools:visibility="visible" />

        <Button
            android:id="@+id/startButton"
            style="@style/SudPrimaryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:text="@string/settings_app_check_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sliderLabel"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
