<?xml version="1.0" encoding="utf-8"?><!--
  SPDX-FileCopyrightText: 2020 The Calyx Institute
  SPDX-License-Identifier: Apache-2.0
  -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        style="@style/SudHeaderIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_cloud_download"
        app:tint="?android:colorAccent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/titleView"
        style="@style/SudHeaderTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/restore_choose_restore_set"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listView"
        style="@style/SudContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/skipView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleView"
        tools:listitem="@layout/list_item_restore_set" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/skipView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleView" />

    <TextView
        android:id="@+id/errorView"
        style="@style/SudContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:textColor="?android:colorError"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@+id/tryAgainButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleView"
        app:layout_constraintVertical_bias="0.25"
        tools:text="@string/restore_set_empty_result"
        tools:visibility="visible" />

    <Button
        android:id="@+id/tryAgainButton"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/restore_set_button_try_again"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/errorView"
        app:layout_constraintStart_toStartOf="@+id/errorView"
        app:layout_constraintTop_toBottomOf="@+id/errorView"
        tools:visibility="visible" />

    <Button
        android:id="@+id/restartButton"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/restore_set_button_restart"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/skipView"
        app:layout_constraintEnd_toEndOf="@+id/errorView"
        app:layout_constraintStart_toStartOf="@+id/errorView"
        app:layout_constraintTop_toBottomOf="@+id/tryAgainButton"
        app:layout_constraintVertical_bias="0"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/skipView"
        style="@style/SudSecondaryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:background="?android:selectableItemBackground"
        android:text="@string/restore_skip_apps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listView" />

</androidx.constraintlayout.widget.ConstraintLayout>
